2000-04-03  Jochen Wiedmann  <joe@ispsoft.de> (1.2211)

	* Fixed $dbh->{Name} (David Jacobs <djacobs@mitre.org>)

1999-11-30  Jochen Wiedmann  <joe@ispsoft.de> (1.2210)

	* Makefile.PL (SelectDrivers): Hopefully ensured that a README is
	  always created successfully.
	* Makefile.PL: Fixed docs of --mysql-install etc. (loic@ceic.com)

1999-10-13  Jochen Wiedmann  <joe@ispsoft.de> (1.2209)

	* Fixed bug in $dbh->tables(): Didnt't work with
	  empty databases.

1999-09-17  Jochen Wiedmann  <joe@ispsoft.de> (1.2208)

	* dbd/bindparam.h: Added support for MySQL's double
	  quotes. (Although I don't like it. :-)
	* dbd/dbd.pm.in: Fixed a lot of docs for deprecated
	  features in favour of current.
	* Makefile.PL: Fixed use of -e (should be exists).
	  tschulth@debis.com (Thomas Schultheis)
	* MONEY seems to be a numeric type with mSQL.
	  Ernst Paalvast <ernst@esdmm.nl>

1999-09-15  Jochen Wiedmann  <joe@gate.ispsoft.de> (1.2207)

	* dbd/dbdimp.c: Added mysql_connect_timeout. 
         Matthias Urlichs (<smurf@noris.de>)

1999-08-29  Jochen Wiedmann  <joe@ispsoft.de> (1.2206)

	* dbd/dbimon.in: Fixed a bug in tab completion. (FieldList was
	  used in scalar context). Thanks to "Scott R. Every" <scott@emji.net>
	* lib/DBD/mysql/Install.pm (Initialize): Now checking for MySQL
	  version 3.22 or later.

1999-08-22  Jochen Wiedmann  <joe@ispsoft.de>

	* lib/DBD/mysql/Install.pm (Initialize): Added sco\d+* to the list
	  of SCO-like operating systems. Thanks to Jukka Inkeri
	  <Jukka.Inkeri@netstar.fi>

1999-08-22  Jochen Wiedmann  <joe@ispsoft.de> (1.2203)

	* dbd/dbd.xs.in: Fixed a memory leak in $dbh->quote().
	  Arun Bhalla <abhalla@usgs.gov>

1999-07-22  Jochen Wiedmann  <joe@ispsoft.de> (1.2202)

	* dbd/dbd.pm.in: The hint for experimental software is now
	  enabled or disabled automatically, thanks to ExtUtils::PerlPP.
	* dbd/dbdimp.c: Changed fprintf to PerlIO_printf, required by
	  DBI 1.14.
	* nodbd/nodbd.pm.in (quote): Changed ~DBD_DRIVER~ to